# ComRaTT

./: .gitignore  Cargo.toml  ComRaTT.opam  README.md  dune-project  flake.nix  run_ratt.sh  run_wasm.html  run_wasm.sh
examples/: 42never.cml  bin_search.cml  bloo.cml  box.cml  boxed_type.cml  collatz.cml  deladv_complex.cml  deladv_constant.cml  deladv_freevar.cml  deladv_multi.cml  deladv_output.cml  deladv_several.cml  factorial.cml  fib.cml  frp.cml  hof.cml  inspect_heap.rs  is_prime.cml  multi.cml  multi_lambda_nest.cml  multi_lukning.cml  multipart.cml  never.cml  old_deladv_freevar.cml  runtime.rs  runtime_copy.rs  runtimetest.rs  scan.cml  sigrec-report.cml  sigrec.cml  toplevel_const.cml  tuples.cml  wasmtime.rs
lib/: absyn.ml  anf.ml  annotate.ml  ast_of_text.ml  comp.ml  compile.ml  dune  infer.ml  infer2.ml  interpret.ml  lambda_lift.ml  lexer.mll  parser.messages  parser.mly  preprocess.ml  source.ml  spj_lambda_lift.ml  symbol.ml
old/: Dockerfile  run_ratt.sh
old/lib/: compile.ml  infer.ml  lambda_lift.ml  lexer.mll  source.ml
src/: anf.rs  backend.rs  bin.rs  constants.rs  error.rs  execute.rs  format.rs  infer.rs  lang.pest  lexer.rs  lib.rs  parse.rs  passes.rs  pest_parse.rs  range.rs  runtime.rs  source.rs  test_suite.rs  types.rs
src/backend/: anf_wasm.rs  wasm.rs  wasm_emitter.rs
src/passes/: anf.rs  eliminate_consec_app.rs  eliminate_consec_lam.rs  eliminate_partial.rs  lambda_lift.rs
test/: dune  test_ComRaTT.ml
