[package]
name = "comratt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "comratt"
path = "src/bin.rs"

[dependencies]
anyhow = "1"
winnow = "0.7"
annotate-snippets = "0.11"
lexopt = "0.3"
logos = "0.15.0"
map_box = "0.2.2"
itertools = "0.14.0"
wasm-encoder = { version = "0.225.0", features = ["wasmparser"] }
wasmparser = "0.225.0"
wasmprinter = "0.225.0"
wat = "1.225.0"
ena = "0.14.3"

[dev-dependencies]
wasmtime-wast = "30"
wasmtime = "30"
