[package]
name = "comratt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "comratt"
path = "src/bin.rs"

[dependencies]
anyhow = "1"
annotate-snippets = "0.11"
lexopt = "0.3"
map_box = "0.2.2"
itertools = "0.14.0"
wasm-encoder = { version = "0.225.0", features = ["wasmparser"] }
wasmparser = "0.225.0"
wasmprinter = "0.225.0"
wat = "1.225.0"
ena = "0.14.3"
wasmtime = "30"
pest = { version = "2.6", features = ["miette-error"] }
miette = "7.5"
pest_derive = "2.6"

[dev-dependencies]
wasmtime-wast = "30"
wasmtime = "30"
