(ocamllex lexer)

(menhir
 (flags --table)
 (modules parser))

; Generate parser messages with
; menhir --list-errors lib/parser.mly > lib/parser.messages
(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action  (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))


(library
 (name ComRaTTlib)
 (libraries menhirLib asai ounit2)
 (preprocess
  (pps ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))
  (inline_tests)
)
